--- a/Code/Embedded/picow_ble/CMakeLists.txt
+++ b/Code/Embedded/picow_ble/CMakeLists.txt
@@ -38,18 +38,29 @@ pico_sdk_init()
 # Standalone example that reads from the on board temperature sensor and sends notifications via BLE
 # Flashes slowly each second to show it's running
 add_executable(picow_ble
-    server.c server_common.c
+    server_demo.c VGA/vga16_graphics.c
     )
+
+# must match with pio filename and executable name from above
+pico_generate_pio_header(picow_ble ${CMAKE_CURRENT_LIST_DIR}/VGA/hsync.pio)
+pico_generate_pio_header(picow_ble ${CMAKE_CURRENT_LIST_DIR}/VGA/vsync.pio)
+pico_generate_pio_header(picow_ble ${CMAKE_CURRENT_LIST_DIR}/VGA/rgb.pio)
+
 target_link_libraries(picow_ble
     pico_stdlib
     pico_btstack_ble
     pico_btstack_cyw43
     pico_cyw43_arch_none
-    hardware_adc
+    hardware_irq
+    hardware_spi
+    hardware_timer
+    hardware_sync
+    hardware_pio
+    hardware_dma
     )
 target_include_directories(picow_ble PRIVATE
     ${CMAKE_CURRENT_LIST_DIR} # For btstack config
     )
-pico_btstack_make_gatt_header(picow_ble PRIVATE "${CMAKE_CURRENT_LIST_DIR}/temp_sensor.gatt")
+pico_btstack_make_gatt_header(picow_ble PRIVATE "${CMAKE_CURRENT_LIST_DIR}/GATT_Service/server_demo_gattfile.gatt")
 
 pico_add_extra_outputs(picow_ble)
